--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="main-wrapper">
-     <app-adminsidebar></app-adminsidebar>
-     <app-adminheader></app-adminheader>
-    <div class="page-wrapper"> 
+    <app-adminsidebar></app-adminsidebar>
+    <app-adminheader></app-adminheader>
+    <div class="page-wrapper">
         <div class="content">
-            
+
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
 
@@ -30,47 +30,146 @@
                 </div>
             </div>
 
-           
-            <div class="card">
+
+            <!-- <div class="card">
                 <div class="card-header">
                     <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Admin Dashboard</b></h4>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="dash-widget">
-                            <span class="dash-widget-bg1"><i class="fas fa-file-alt" aria-hidden="true"></i></span>
-                            <div class="dash-widget-info text-right">
-                                <h3>98</h3>
-                                <span class="widget-title1">Faculties <i class="fa fa-check" aria-hidden="true"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="dash-widget">
-                            <span class="dash-widget-bg2"><i class="far fa-calendar-check"></i></span>
-                            <div class="dash-widget-info text-right">
-                                <h3>1072</h3>
-                                <span class="widget-title2">Students <i class="fa fa-check"
-                                        aria-hidden="true"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="dash-widget">
-                            <span class="dash-widget-bg3"><i class="fas fa-hourglass-half"
-                                    aria-hidden="true"></i></span>
-                            <div class="dash-widget-info text-right">
-                                <h3>72</h3>
-                                <span class="widget-title3">Pending Approval <i class="fa fa-check"
-                                        aria-hidden="true"></i></span>
-                            </div>
-                        </div>
-                    </div>
-                    
-                </div>
 
+                <div class="container"> -->
+                    <div class="row">
+                        <div class="col">
+                            <div class="dash-widget">
+                                <span class="dash-widget-bg1"><i class="fas fa-users" aria-hidden="true"></i></span>
+                                <div class="dash-widget-info text-right">
+                                    <h3>98</h3>
+                                    <span class="widget-title1">Faculties <i class="fa fa-check"
+                                            aria-hidden="true"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="dash-widget">
+                                <span class="dash-widget-bg2"><i class="fas fa-users"></i></span>
+                                <div class="dash-widget-info text-right">
+                                    <h3>1072</h3>
+                                    <span class="widget-title2">Students <i class="fa fa-check"
+                                            aria-hidden="true"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="dash-widget">
+                                <span class="dash-widget-bg3"><i class="fas fa-user"
+                                        aria-hidden="true"></i></span>
+                                <div class="dash-widget-info text-right">
+                                    <h3>72</h3>
+                                    <span class="widget-title3">Class Teacher <i class="fa fa-check"
+                                            aria-hidden="true"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="dash-widget">
+                                <span class="dash-widget-bg4"><i class="fas fa-home"
+                                        aria-hidden="true"></i></span>
+                                <div class="dash-widget-info text-right">
+                                    <h3>72</h3>
+                                    <span class="widget-title4">Departments <i class="fa fa-check"
+                                            aria-hidden="true"></i></span>
+                                </div>
+                            </div>
+                        </div>
 
-            </div> 
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-12">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title d-inline-block"><b style="font-weight: 500;">Give Approval</b></h4> <a routerLink="../admingiveapproval"
+                                        class="btn btn-primary float-right">View all</a>
+                                </div>
+                                <div class="card-body p-0">
+                                    <div class="table-responsive">
+                                        <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>Faculty</th>
+                                                    <th>Leave Type</th>
+                                                    <th>Leave Start</th>
+                                                    <th>Leave End</th>
+                                                    <th>Reason</th>
+                                                    <th>Status</th>
+                                                    <th>Action</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Aryan</td>
+                                                    <td>asd</td>
+                                                    <td>12-Dec-2022</td>
+                                                    <td>12-Dec-2022</td>
+                                                    <td>hello my name is devesh sheth</td>
+                                                    <td><span class="pending">Pending</span></td>
+                                                    <td>
+                                                        <a href="#" class="action-icon dropdown-toggle"
+                                                            data-toggle="dropdown" aria-expanded="false"><i
+                                                                class="fa fa-ellipsis-v"></i></a>
+                                                        <div class="dropdown-menu dropdown-menu-right">
+                                                            <a class="dropdown-item"><i
+                                                                    class="far fa-edit"></i>&nbsp;Edit</a>
+                                                            <a class="dropdown-item"><i
+                                                                    class="fas fa-check"></i>&nbsp;Accept</a>
+                                                            <a class="dropdown-item"><i class="fas fa-trash"
+                                                                    data-toggle="modal"
+                                                                    data-target="#myModal"></i>&nbsp;Reject</a>
+                                                            <a class="dropdown-item" data-toggle="modal"
+                                                                data-target="#myModal1"><i
+                                                                    class="far fa-file-alt"></i>&nbsp;Details</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+    
+                                               
+                                                <tr>
+                                                    <td>Aryan</td>
+                                                    <td>asd</td>
+                                                    <td>12-Dec-2022</td>
+                                                    <td>12-Dec-2022</td>
+                                                    <td>hello my name is devesh sheth</td>
+                                                    <td><span class="pending">Pending</span></td>
+                                                    <td>
+                                                        <a href="#" class="action-icon dropdown-toggle"
+                                                            data-toggle="dropdown" aria-expanded="false"><i
+                                                                class="fa fa-ellipsis-v"></i></a>
+                                                        <div class="dropdown-menu dropdown-menu-right">
+                                                            <a class="dropdown-item"><i
+                                                                    class="far fa-edit"></i>&nbsp;Edit</a>
+                                                            <a class="dropdown-item"><i
+                                                                    class="fas fa-check"></i>&nbsp;Accept</a>
+                                                            <a class="dropdown-item"><i class="fas fa-trash"
+                                                                    data-toggle="modal"
+                                                                    data-target="#myModal"></i>&nbsp;Reject</a>
+                                                            <a class="dropdown-item" data-toggle="modal"
+                                                                data-target="#myModal1"><i
+                                                                    class="far fa-file-alt"></i>&nbsp;Details</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+    
+    
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+    
+                    </div>
+
+                <!-- </div>
+            </div> -->
 
 
         </div>
