--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
                     </div>
                     <div class="form-group">
                         <label>Username or Email</label>
-                        <input type="text" autofocus="" class="form-control" formControlName="username">
+                        <input type="text" autofocus="" class="form-control" formControlName="email">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
